# kr_test

./: README.md  colcon.pkg  dependencies.repos  package.xml  setup.cfg  setup.py
docker/: Dockerfile  docker-compose.yml  entrypoint.bash
kr_test/: __init__.py  gen_traj.py  position_node.py  position_traj.py  velocity_node.py  velocity_traj.py
scripts/: position_node.py  velocity_node.py
