<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kr_test</name>
  <version>0.0.1</version>
  <description>Test the ROS2 CBun for the Kassow KR1410 robotic manipulator</description>
  <maintainer email="collin.thornton@swri.org">Collin Thornton</maintainer>
  <license>BSD</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>python3-numpy</depend>

  <depend>kr_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
